REGRESSION(r275267) Network process crashes in Data::adoptMap https://bugs.webkit.org/show_bug.cgi?id=225159 <rdar://77066555>

Patch by Alex Christensen <achristensen@webkit.org> on 2021-04-28
Reviewed by Geoffrey Garen.

There was a missing check to see if mapping was successful.

* NetworkProcess/cache/NetworkCacheData.cpp:
(WebKit::NetworkCache::Data::mapToFile const):

Canonical link: https://commits.webkit.org/237131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276730 268f45cc-cd09-0410-ab3c-d52691b4dbfc